Up version to 5.0.0; Update dependencies; Minor code fixes; Solve relevant IDE warnings